--- a/MyApplication2/app/src/main/res/layout/activity_detail.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_detail.xml
@@ -53,6 +53,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingTop="24dp">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,6 +62,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_margin="@dimen/detail_margin" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,6 +70,7 @@
                 android:padding="@dimen/detail_padding"
                 android:textSize="22sp"
                 android:layout_margin="@dimen/detail_margin" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,7 +78,8 @@
                 android:padding="@dimen/detail_padding"
                 android:textSize="22sp"
                 android:layout_margin="@dimen/detail_margin"
-                android:autoLink="web"/>
+                android:autoLink="web" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,7 +102,8 @@
         android:contentDescription="@string/bookmark"
 
         android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"/>
+        android:clickable="true" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
         android:layout_height="wrap_content"
@@ -111,7 +116,6 @@
         app:pressedTranslationZ="6dp"
         app:borderWidth="0dp"
         android:layout_gravity="bottom|right"
-        app:layout_anchorGravity="bottom|right|end"
-        />
+        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
