--- a/MyApplication2/app/src/main/res/layout/card_item1.xml
+++ b/MyApplication2/app/src/main/res/layout/card_item1.xml
@@ -16,24 +16,24 @@
         android:layout_marginRight="@dimen/cardmargin"
         card_view:cardBackgroundColor="@color/colorlist"
         card_view:cardCornerRadius="7dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/tv_text"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    />
 
-    <ImageView
-        android:id="@+id/newsimage"
-    android:layout_below="@id/tv_text"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/lheight"
-    android:layout_marginTop="20dp"
-    android:scaleType="fitXY"
-    />
-</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/newsimage"
+                android:layout_below="@id/tv_text"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lheight"
+                android:layout_marginTop="20dp"
+                android:scaleType="fitXY" />
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 </RelativeLayout>
