--- a/MyApplication2/app/src/main/res/layout/list_item.xml
+++ b/MyApplication2/app/src/main/res/layout/list_item.xml
@@ -6,16 +6,14 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/listpadding"
-    android:paddingRight="@dimen/listpadding"
-    >
+    android:paddingRight="@dimen/listpadding">
 
     <TextView
         android:id="@+id/title1"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start|center_vertical"
-         />
+        android:gravity="start|center_vertical" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -27,10 +25,9 @@
             android:id="@+id/author1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-             />
+            android:layout_marginRight="10dp" />
 
 
-             />
+        />
     </LinearLayout>
 </LinearLayout>
