--- a/MyApplication2/app/src/main/res/layout/widget.xml
+++ b/MyApplication2/app/src/main/res/layout/widget.xml
@@ -17,7 +17,7 @@
             android:layout_weight="1"
             android:layout_marginStart="@dimen/widgetmargin"
             android:gravity="center_vertical"
-            android:text="Your news"
+            android:text="@string/favouritenews"
 
             android:layout_marginLeft="@dimen/widgetmargin" />
     </LinearLayout>
@@ -26,6 +26,6 @@
         android:id="@+id/widget_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_dark_background"/>
+        android:background="@color/cardview_dark_background" />
 
 </LinearLayout>
